resources/assets/sass/blocks/block-styles.scss
.wp-block-columns {
	align-items: flex-start;
	margin-bottom: 70px;
	margin-top: 70px;
	@include screen-px(600){
		margin-top: 30px;
		margin-bottom: 30px;
	}
	justify-content: center;
	.wp-block-column .wp-block-image {
		padding: 0px 20px;
		@include screen-px (800){
			padding: 0px 10px;
			width: 100%;
		}
	}
	.wp-block-willamette-blocks-image-box  ~ p {
		padding: 20px 20px;
		@include screen-px (600){
			padding: 30px 10% 0px 10%;
		}
	}
	.wp-block-column {
		padding: 0;
		figure.wp-block-image {
			margin-bottom: 0px;
		}
		align-self: flex-start;
		margin: 8px !important;
		@include screen-px(782){
			& > .wp-block-image {
				@include screen-px (600){
					padding: 0px !important;
					img {
						object-fit: cover;
						min-height: 200px;
					}
				}
			}
		}
		@include screen-px(600){
			margin: 0px !important;
		}
	}
	&.tall-margins { margin: 4.0rem 0; }
	&.narrow-gutter { margin:0; }

	img {
		height: auto;
	}
}

.alignfull {
	margin-top: 70px;
	margin-bottom: 70px;
	margin-left: calc(50% - 50vw);
	margin-right: calc(50% - 50vw);
	max-width: 100vw;
	width: 100vw;
	height: auto;
	& > figure > img {
		object-fit: cover;
		object-position: center center;
		min-height: 400px;
		width: auto;
	}
	&.pattern-bg.wp-block-group > *{
		max-width: 1200px;
		margin: 0px auto;
	}
}
figure.alignfull img {
	object-fit: cover;
	object-position: center center;
}

.wp-block-image.alignfull {
	overflow: hidden;
	height: 400px;
	object-fit: cover;
	width: auto;
		img {
			height: 130%;
			width: 100%;
			max-width: 200%;
		}
	@include screen-px(600){
		height: 300px;
		overflow: visible;
		img {
			height: 100%;
		}
	}
}
.page .wp-block-image.alignfull {
	margin-top: 0px;
	margin-bottom: 0px;
}
.page .wp-block-group.alignfull {
	margin-top: 0px;
	margin-bottom: 0px;
}
.single-post .content-area{
	margin-bottom: 60px;
}

.alignwide {
	margin: 32px calc(25% - 25vw);
	max-width: 100vw;
	img {
		max-width: 100%;
		width: 100%;
	}
}
@media (max-width: 920px) {
	.alignwide {
		max-width: 920px;
		width: 920px;
	}
}
.wp-block-button {
	margin: 20px 0px 10px 0px;
	a {
		text-decoration: none; 
	}
}
.alignnone {
	text-align: left;
}
.aligncenter,
div.aligncenter {
    display: block;
    margin: 5px auto 5px auto;
}

.alignright {
    float:right;
    margin: 5px 0 20px 20px;
	@include screen-px(600){
		float: none !important;
		margin: 0px auto !important;
	}
}

.alignleft {
    float: left;
    margin: 5px 20px 20px 0;
	@include screen-px(600){
		float: none !important;
		margin: 0px auto !important;
	}
}

.wp-caption {
    color: $dark-gray;
	font-size: 90%;
    max-width: 96%; /* Image does not overflow the content area */
    padding: 5px 3px 10px;
    text-align: center;
}

.wp-caption.alignnone {
    margin: 5px 20px 20px 0;
}

.wp-caption.alignleft {
    margin: 5px 20px 20px 0;
}

.wp-caption.alignright {
    margin: 5px 0 20px 20px;
}

.wp-caption img {
    border: 0 none;
    height: auto;
    margin: 0;
    max-width: 98.5%;
    padding: 0;
    width: auto;
}

.wp-caption p.wp-caption-text {
    font-size: 11px;
    line-height: 17px;
    margin: 0;
    padding: 0 4px 5px;
}
.site-main > h2, .site-main > h3, .site-main > h4, h2.gform_title {
	font-family: $alt-header-font;
	color: $teal;
	font-weight: 800;
	font-size: 2.2em;
	margin-bottom: 40px;
	margin-top: 60px;
	text-align: center;
	max-width: 650px;
	margin-left: auto;
	margin-right: auto;
	a { color: $white !important; }
	@include screen-px(600){
		padding: 0px 15px;
		font-size: 2em;
		margin-top: 40px;
	}
}
.wp-block-willamette-blocks-image-box__content {
	.wp-block-column > h1, .wp-block-column > h2, .wp-block-column > h3, .wp-block-column > h4 {
		color: $white;
	}

	h1, h2, h3, h4 {
		a {
			color: $white !important;
			text-decoration: none !important;
			width: 100%;
		}
	}
}
.wp-block-column > h1, .wp-block-column > h2, .wp-block-column > h3, .wp-block-column > h4 {
	font-family: $alt-header-font;
	color: $teal;
	font-weight: 800;
	font-size: 2.5em;
	margin-bottom: 20px;
	line-height: 1.1;
	@include screen-px(600){
		font-size: 2em;
	}
}
.wp-block-group__inner-container > h1, .wp-block-group__inner-container > h2, .wp-block-group__inner-container > h3, .wp-block-group__inner-container > h4 {
	font-family: $alt-header-font;
	color: $teal;
	font-weight: 800;
	font-size: 2.2em;
	margin-bottom: 40px;
	margin-top: 60px;
	@include screen-px(600){
		margin-top: 20px;
		font-size: 2em;
	}
}
.site-main > p, .pattern-bg .wp-block-group__inner-container > p {
	width: 800px;
	margin: 20px auto;
	max-width: 90%;
	line-height: 1.2;
	font-size: 1em;
	@include screen-px(600){
		padding: 0px 10px;
	}
}
.narrow-columns {
	justify-content: center;
	text-align: center;
	.wp-block-column {
		flex-basis: 15%;
		flex-grow: 0;
		@include screen-px(700){
			img {
				max-width: 40%;
			}
		}
		p {
			padding-top: 10px;
		}
	}
}
.notfullwidth {
	width: 1200px;
	margin: 0px auto;
	max-width: 95%;
}
.plain-links {
	a:link, a:visited {
		color: $grey;
		text-transform: uppercase;
		letter-spacing: 2px;
		text-decoration: none;
	}
}

.transparent {
	transition: .4s all;
}


.pattern-bg {
	background-image: url(#{$IMAGES-PATH}/light-pattern.png);
	background-color: $purple;
	background-size: 50%;
	margin-bottom: 0px;
	margin-top: 0px;
	@include screen-px (600){
		background-size: 150% !important;
		background-color: $light-tan !important;
	}
}
p {
	font-family: $body-font;
	color: $grey;
}
h1.is-style-Highlighted, h2.is-style-Highlighted, h3.is-style-Highlighted, h4.is-style-Highlighted, h5.is-style-Highlighted {
	background: $purple;
	padding: 20px;
	color: $white;
	display: inline-block;
	padding-left: 100px;
}
.is-style-titlecase {
	text-transform: capitalize !important;
}

.wp-block-image img {
	height: auto;
}
.wp-block-columns .wp-block-column[style~="flex-basis:33.33%"] {
	align-self: center;
}
.site-main .blocks-gallery-grid {
	padding-left: 0px;
}

